--- a/source/MaterialXRender/CMakeLists.txt
+++ b/source/MaterialXRender/CMakeLists.txt
@@ -11,8 +11,8 @@ if(NOT MATERIALX_BUILD_OIIO)
 endif()
 message("MATERIALX_BUILD_GLTF=${MATERIALX_BUILD_GLTF}")
 if (NOT MATERIALX_BUILD_GLTF)
-    list(REMOVE_ITEM materialx_headers "${CMAKE_CURRENT_SOURCE_DIR}/TinyGLTFLoader.h")
-    list(REMOVE_ITEM materialx_source "${CMAKE_CURRENT_SOURCE_DIR}/TinyGLTFLoader.cpp")
+    list(REMOVE_ITEM materialx_headers "${CMAKE_CURRENT_SOURCE_DIR}/GLTFLoader.h")
+    list(REMOVE_ITEM materialx_source "${CMAKE_CURRENT_SOURCE_DIR}/GLTFLoader.cpp")
 endif()
 
 assign_source_group("Source Files" ${materialx_source})
